--- a/frontend_sl/registration/templates/registration/reset_password_email.html
+++ b/frontend_sl/registration/templates/registration/reset_password_email.html
@@ -28,7 +28,7 @@
                                         {% csrf_token %}
 										<div class="form-group">
 											<label>Email</label>
-                                            {{ reset_form.errors.email }}
+                                            <span class="text-primary"> {{ reset_form.errors.email }}</span>
                                             {{ reset_form.email }}
 										</div>
                                         <div class="form-group">
