--- a/frontend_sl/home/templates/home/index.html
+++ b/frontend_sl/home/templates/home/index.html
@@ -18,27 +18,18 @@ Home
             <div class="container">
                 <h2 class="mb-5">The highest people stars ..</h2>
                 <div class="row">
+                    {% if top_users %}
+                        {% for profile in top_users %}
+
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="{% static 'home/img/Me.png' %}" alt="..." />
-                            <a href="#" class="text-decoration-none"> <h5>Margaret E.</h5> </a>
-                            <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
+                            <img class="img-fluid rounded-circle mb-3" src="{{ profile.image }}" alt="{{ profile.user.full_name }}" />
+                            <a href="{% url 'user_profile:profile' profile.profile_slug %}" class="text-decoration-none"><h5>{{ profile.user.full_name }}</h5></a>
+                            <p class="font-weight-light mb-0">{{ profile.about_me }}</p>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="{% static 'home/img/Me.png' %}" alt="..." />
-                            <a href="#" class="text-decoration-none"><h5>Fred S.</h5></a>
-                            <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="{% static 'home/img/Me.png' %}" alt="..." />
-                            <a href="#" class="text-decoration-none"><h5>Sarah W.</h5></a>
-                            <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
-                        </div>
-                    </div>
+                        {% endfor %}
+                    {% endif %}
                 </div>
             </div>
         </section>
@@ -58,50 +49,25 @@ Home
                     </div>
                     <!-- Nested row for non-featured blog posts-->
                     <div class="row">
+                        {% if posts %}
+                            {% for post in posts %}
                         <div class="col-lg-6">
                             <!-- Blog post-->
                             <div class="card mb-4">
-                                <img class="card-img-top" src="{% static 'home/img/file.png' %}" alt="..." />
+                                <img class="card-img-top" src="{% static 'home/img/file.png' %}" alt="{{ post.title }}" />
                                 <div class="card-body">
-                                    <div class="small text-muted">January 1, 2022</div>
-                                    <h2 class="card-title h4">Post Title</h2>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                                    <a class="btn btn-primary" href="#!">Read more →</a>
+                                    <div class="small text-muted">{{ post.created }}</div>
+                                    <h2 class="card-title h4">{{ post.title }}</h2>
+                                    <p class="card-text">{{ post.description }}</p>
+                                    <a class="btn btn-primary" href="{% url 'post:index' post.slug %}">Read more →</a>
                                 </div>
                             </div>
-                            <!-- Blog post-->
-                            <div class="card mb-4">
-                                <img class="card-img-top" src="{% static 'home/img/file.png' %}" alt="..." />
-                                <div class="card-body">
-                                    <div class="small text-muted">January 1, 2022</div>
-                                    <h2 class="card-title h4">Post Title</h2>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                                    <a class="btn btn-primary" href="#!">Read more →</a>
-                                </div>
-                            </div>
+
                         </div>
-                        <div class="col-lg-6">
-                            <!-- Blog post-->
-                            <div class="card mb-4">
-                                <img class="card-img-top" src="{% static 'home/img/file.png' %}" alt="..." />
-                                <div class="card-body">
-                                    <div class="small text-muted">January 1, 2022</div>
-                                    <h2 class="card-title h4">Post Title</h2>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                                    <a class="btn btn-primary" href="#!">Read more →</a>
-                                </div>
-                            </div>
-                            <!-- Blog post-->
-                            <div class="card mb-4">
-                                <img class="card-img-top" src="{% static 'home/img/file.png' %}" alt="..." />
-                                <div class="card-body">
-                                    <div class="small text-muted">January 1, 2022</div>
-                                    <h2 class="card-title h4">Post Title</h2>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam.</p>
-                                    <a class="btn btn-primary" href="#!">Read more →</a>
-                                </div>
-                            </div>
-                        </div>
+
+                            {% endfor %}
+                        {% endif %}
+
                     </div>
                     <!-- Pagination-->
                     <nav aria-label="Pagination">
