--- a/frontend_sl/home/templates/home/search.html
+++ b/frontend_sl/home/templates/home/search.html
@@ -14,42 +14,74 @@ Search
     <div class="row">
 
 
-        {% for o in objects %}
-
-        {% endfor %}
 
 
 
-        {% if people_template or post_template %}
+
+        {% if people_template %}
 
 
+        {% for profile in objects %}
 
-        <div class="post-list">
+            <div class="post-list">
             <div class="row">
                 <div class="col-sm-2">
                     <div class="picture">
-                        <img alt="Opt wizard thumbnail" src="{% static 'home/img/Me.png' %}">
+                        <img  src="{{ profile.image }}" alt="{{ profile.user.full_name }}">
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <h4>
-                        <span  class="username">Deyson Bejarano</span>
-                        <i class="fa fa-star"></i> <span class="like-count">25</span>
-                        {% if post_template %}
-                         <i class="fa fa-comment"></i> <span class="like-count">25</span>
-                            {% endif %}
+                        <span  class="username">{{ profile.user.full_name }}</span>
+                        <i class="fa fa-star"></i> <span class="like-count">{{ profile.user_stars }}</span>
+
 
                     </h4>
 
-                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In velit lectus, efficitur eu eros vel, luctus aliquet est. Sed sit amet ligula non mauris porta dignissim..</p>
+                    <p class="description">{{ profile.about_me }}</p>
 
-                <a class="btn btn-info btn-download btn-round pull-right makeLoading" href="#">
+                <a class="btn btn-info btn-download btn-round pull-right makeLoading" href="{% url 'user_profile:profile' profile.profile_slug %}">
                     <i class="fa fa-share"></i> View
                     </a>
                 </div>
 
             </div>
         </div>
+
+        {% endfor %}
+
+            {% elif post_template %}
+
+        {% for post in objects %}
+
+            <div class="post-list">
+            <div class="row">
+                <div class="col-sm-2">
+                    <div class="picture">
+                        <img alt="{{ post.title }}" src="{% static 'home/img/file.png' %}">
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <h4>
+                        <span  class="username">{{ post.title }}</span>
+                        <i class="fa fa-star"></i> <span class="like-count">{{ post.total_stars }}</span>
+                        {% if post_template %}
+                         <i class="fa fa-comment"></i> <span class="like-count">{{ post.total_comments }}</span>
+                            {% endif %}
+
+                    </h4>
+
+                    <p class="description">{{ post.description }}</p>
+
+                <a class="btn btn-info btn-download btn-round pull-right makeLoading" href="{% url 'post:index' post.slug %}">
+                    <i class="fa fa-share"></i> View
+                    </a>
+                </div>
+
+            </div>
+        </div>
+
+        {% endfor %}
 
 
         {% endif %}
