--- a/frontend_sl/post/templates/post/index.html
+++ b/frontend_sl/post/templates/post/index.html
@@ -9,18 +9,19 @@ Post
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 {% endblock %}
 {% block content %}
+
 <div class="container bootstrap snippets bootdey">
-    <di class="col-md-8">
+    <div class="col-md-8">
         <div class="col-sm-12">
             <div class="panel panel-white post panel-shadow">
                 <div class="post-heading">
                     <div class="pull-left image">
-                        <img src="https://bootdey.com/img/Content/user_1.jpg" class="img-circle avatar" alt="user profile image">
+                        <img src="{{ post.user_image }}" class="img-circle avatar" alt="{{ post.posted_by }}">
                     </div>
                     <div class="pull-right meta">
                         <div class="stats">
                         <form action="" method="post" style="display: inline">
-                            1228
+                            {{ post.total_stars }}
                             {% csrf_token %}
                             {{ star_form.star }}
                         <button type="submit" class="btn btn-default stat-item" >
@@ -37,27 +38,33 @@ Post
 
                         </form>
                             <!-- just for the post owner can see it -->
+
+                            {% if post.username == post_user_username %}
                         <a class="btn btn-dark" href="{% url 'post:edit_post' post_slug %}">Edit</a>
+                            {% endif %}
 
                     </div>
 
                     </div>
                     <div class="pull-left meta">
                         <div class="title h5">
-                            <a href="#" class="text-decoration-none"><b>Brian cartelly</b></a>
+                            <a href="{% url 'user_profile:profile' post.profile_slug %}" class="text-decoration-none"><b>{{ post.posted_by }}</b></a>
 
 
                         </div>
-                        <h6 class="text-muted time">Posted on 21/5/2020</h6>
+                        <h6 class="text-muted time">Posted on {{ post.created }}</h6>
                     </div>
                 </div>
                 <div class="post-image">
+
+                    <!-- Link to the file -->
+                    <a href="{{ post.file }}">
                     <img src="{% static 'home/img/file.png' %}" class="image" alt="image post">
+                        </a>
                 </div>
                 <div class="post-description">
-                    <h4>File title</h4>
-                    <p>Put here your foto description Put here your foto descriptionPut here your foto description
-                        Put here your foto descriptionPut here your foto description
+                    <h4>{{ post.title }}</h4>
+                    <p>{{ post.description }}
                     </p>
 
                 </div>
@@ -76,47 +83,27 @@ Post
                     </form>
 
                     <ul class="comments-list">
-                        <li class="comment">
-                            <a class="pull-left" href="#">
-                                <img class="avatar" src="https://bootdey.com/img/Content/user_3.jpg" alt="avatar">
-                            </a>
-                            <div class="comment-body">
-                                <div class="comment-heading">
-                                    <h4 class="user">Full name 1</h4>
-                                    <h5 class="time">21/5</h5>
-                                </div>
-                                <p>This is a comment bla bla bla</p>
-                            </div>
-                        </li>
-                        <li class="comment">
-                            <a class="pull-left" href="#">
-                                <img class="avatar" src="https://bootdey.com/img/Content/user_2.jpg" alt="avatar">
-                            </a>
-                            <div class="comment-body">
-                                <div class="comment-heading">
-                                    <h4 class="user">Full name 2</h4>
-                                    <h5 class="time">21/5</h5>
-                                </div>
-                                <p>This is another comment bla bla bla</p>
-                            </div>
-                        </li>
-                        <li class="comment">
-                            <a class="pull-left" href="#">
-                                <img class="avatar" src="https://bootdey.com/img/Content/user_3.jpg" alt="avatar">
-                            </a>
-                            <div class="comment-body">
-                                <div class="comment-heading">
-                                    <h4 class="user">Full name 1</h4>
-                                    <h5 class="time">21/5</h5>
-                                </div>
-                                <p>Wow! This is a comment</p>
-                            </div>
-                        </li>
+                        {% if post.comments %}
+                            {% for comment in post.comments %}
+                                <li class="comment">
+                                    <a class="pull-left" href="{% url 'user_profile:profile' comment.profile_slug %}">
+                                        <img class="avatar" src="{{ comment.user_image }}" alt="{{comment.user_name}}">
+                                    </a>
+                                    <div class="comment-body">
+                                        <div class="comment-heading">
+                                            <h4 class="user">{{ comment.user_name }}</h4>
+                                            <h5 class="time">{{ comment.created }}</h5>
+                                        </div>
+                                        <p>{{ comment.comment }}</p>
+                                    </div>
+                                </li>
+                            {% endfor %}
+                        {% endif %}
                     </ul>
                 </div>
             </div>
         </div>
-    </di>
+    </div>
 </div>
 {% endblock %}
 {% block js %}
