--- a/frontend_sl/registration/templates/registration/reset_password_form.html
+++ b/frontend_sl/registration/templates/registration/reset_password_form.html
@@ -28,7 +28,7 @@
                                         {% csrf_token %}
 										<div class="form-group">
 											<label>New Password</label>
-                                            {{ reset_password.errors.password }}
+                                            <span class="text-primary"> {{ reset_password.errors.password }}</span>
                                             {{ reset_password.password }}
 										</div>
                                         <div class="form-group">
