--- a/frontend_sl/user_profile/templates/user_profile/edit.html
+++ b/frontend_sl/user_profile/templates/user_profile/edit.html
@@ -110,7 +110,7 @@ Edit Profile
 					<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
 						<div class="text-right">
 							<input type="submit" name="submit" class="btn btn-primary" value="Update">
-							<a href="{% url 'user_profile:profile' user_slug %}" class="btn btn-secondary ">Cancel</a>
+							<a href="{% url 'user_profile:profile' profile_slug %}" class="btn btn-secondary ">Cancel</a>
 						</div>
 					</div>
 
