--- a/frontend_sl/home/templates/home/base.html
+++ b/frontend_sl/home/templates/home/base.html
@@ -15,9 +15,10 @@
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg" style="color: white">
 
   <a class="navbar-brand" href="{% url 'home:index' %}">Home</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+
+     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
   <div class="collapse navbar-collapse" id="navbarText">
 
     <ul class="navbar-nav mr-auto">
@@ -59,7 +60,7 @@
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2022 Copyright:
-    <a class="text-white alert-link text-decoration-none" href="https://mdbootstrap.com/">Qutaiba Olayyan</a>
+    <a class="text-white alert-link text-decoration-none" href="https://www.flowcode.com/page/swat1563">Qutaiba Olayyan</a>
   </div>
   <!-- Copyright -->
 </footer>
